tests/textual/error/chooseUnit-no-force.uplc
(program 0.0.0 [[(builtin chooseUnit) (con unit ())] (con integer 2)])